syntax="proto2";

option optimize_for=SPEED;

package aap_protobuf.service.radio;

import "aap_protobuf/service/radio/message/RadioProperties.proto";

message RadioService {
    repeated message.RadioProperties radio_properties = 1;
}